feat: new `/api/veggies` endpoint
